--- a/literatur.bib
+++ b/literatur.bib
@@ -1,3 +1,21 @@
+@inproceedings{krizhevsky2012imagenet,
+  title={Imagenet classification with deep convolutional neural networks},
+  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+  booktitle={Advances in neural information processing systems},
+  pages={1097--1105},
+  year={2012}
+}
+
+@article{hecht1988theory,
+  title={Theory of the backpropagation neural network.},
+  author={Hecht-Nielsen, Robert and others},
+  journal={Neural Networks},
+  volume={1},
+  number={Supplement-1},
+  pages={445--448},
+  year={1988}
+}
+
 @article{Hinton:Boltzman:2007,
 	AUTHOR = {Hinton, G. E.},
 	TITLE   = {{B}oltzmann machine},
